# team-points-calculator

./: CMakeLists.txt  conanfile.py
profiles/: mac-debug  mac-release  win-debug
src/: pointSystem.cpp  pointSystem.h  team.cpp  team.h  teamPointsCalc.cpp
src/tests/: pointSystem_tests.cpp  team_tests.cpp
